--- a/src/view/TicTacFxView.fxml
+++ b/src/view/TicTacFxView.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TicTacFxApp">
    <children>
-      <GridPane gridLinesVisible="true" layoutX="44.0" layoutY="63.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
+      <GridPane fx:id="gridPane" gridLinesVisible="true" layoutX="44.0" layoutY="63.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="30.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="30.0" />
@@ -20,54 +20,54 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label fx:id="r0c0" alignment="CENTER" onMouseClicked="#onClick" prefHeight="25.0" prefWidth="25.0" text="x" textAlignment="CENTER">
+            <Label alignment="CENTER" onMouseClicked="#onClick" prefHeight="25.0" prefWidth="25.0" text="x" textAlignment="CENTER">
                <GridPane.margin>
                   <Insets left="3.0" />
                </GridPane.margin>
             </Label>
-            <Label fx:id="r2c1" alignment="CENTER" layoutX="12.0" layoutY="17.0" onMouseClicked="#onClick" prefHeight="25.0" prefWidth="25.0" text="x" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <Label alignment="CENTER" layoutX="12.0" layoutY="17.0" onMouseClicked="#onClick" prefHeight="25.0" prefWidth="25.0" text="x" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="3.0" />
                </GridPane.margin>
             </Label>
-            <Label fx:id="r2c0" alignment="CENTER" layoutX="10.0" layoutY="17.0" onMouseClicked="#onClick" prefHeight="25.0" prefWidth="25.0" text="x" textAlignment="CENTER" GridPane.rowIndex="2">
+            <Label alignment="CENTER" layoutX="10.0" layoutY="17.0" onMouseClicked="#onClick" prefHeight="25.0" prefWidth="25.0" text="x" textAlignment="CENTER" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="3.0" />
                </GridPane.margin>
             </Label>
-            <Label fx:id="r1c1" alignment="CENTER" layoutX="10.0" layoutY="17.0" onMouseClicked="#onClick" prefHeight="25.0" prefWidth="25.0" text="x" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <Label alignment="CENTER" layoutX="10.0" layoutY="17.0" onMouseClicked="#onClick" prefHeight="25.0" prefWidth="25.0" text="x" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="3.0" />
                </GridPane.margin>
             </Label>
-            <Label fx:id="r1c0" alignment="CENTER" layoutX="10.0" layoutY="17.0" onMouseClicked="#onClick" prefHeight="25.0" prefWidth="25.0" text="x" textAlignment="CENTER" GridPane.rowIndex="1">
+            <Label alignment="CENTER" layoutX="10.0" layoutY="17.0" onMouseClicked="#onClick" prefHeight="25.0" prefWidth="25.0" text="x" textAlignment="CENTER" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="3.0" />
                </GridPane.margin>
             </Label>
-            <Label fx:id="r0c1" alignment="CENTER" layoutX="10.0" layoutY="17.0" onMouseClicked="#onClick" prefHeight="25.0" prefWidth="25.0" text="x" textAlignment="CENTER" GridPane.columnIndex="1">
+            <Label alignment="CENTER" layoutX="10.0" layoutY="17.0" onMouseClicked="#onClick" prefHeight="25.0" prefWidth="25.0" text="x" textAlignment="CENTER" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets left="3.0" />
                </GridPane.margin>
             </Label>
-            <Label fx:id="r0c2" alignment="CENTER" layoutX="10.0" layoutY="17.0" onMouseClicked="#onClick" prefHeight="25.0" prefWidth="25.0" text="x" textAlignment="CENTER" GridPane.columnIndex="2">
+            <Label alignment="CENTER" layoutX="10.0" layoutY="17.0" onMouseClicked="#onClick" prefHeight="25.0" prefWidth="25.0" text="x" textAlignment="CENTER" GridPane.columnIndex="2">
                <GridPane.margin>
                   <Insets left="3.0" />
                </GridPane.margin>
             </Label>
-            <Label fx:id="r1c2" alignment="CENTER" layoutX="10.0" layoutY="17.0" onMouseClicked="#onClick" prefHeight="25.0" prefWidth="25.0" text="x" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <Label alignment="CENTER" layoutX="10.0" layoutY="17.0" onMouseClicked="#onClick" prefHeight="25.0" prefWidth="25.0" text="x" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="3.0" />
                </GridPane.margin>
             </Label>
-            <Label fx:id="r2c2" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="17.0" onMouseClicked="#onClick" prefHeight="25.0" prefWidth="25.0" text="x" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="2">
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="17.0" onMouseClicked="#onClick" prefHeight="25.0" prefWidth="25.0" text="x" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="3.0" />
                </GridPane.margin>
             </Label>
          </children>
       </GridPane>
-      <ButtonBar layoutX="67.0" layoutY="146.0" prefHeight="40.0" prefWidth="200.0" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="5.0">
+      <ButtonBar layoutX="67.0" layoutY="146.0" prefHeight="40.0" prefWidth="80.0" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="5.0">
         <buttons>
             <Button fx:id="exitGame" mnemonicParsing="false" onAction="#exitGame" text="Exit" />
         </buttons>
